# BLE-connect-to-the-certain-stopwatch

python/: README.md  pyproject.toml
python/src/ble_to_the_certain_stopwatch_py/: __init__.py
