[project]
name = "ble-to-the-certain-stopwatch-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nobuyasu Tomura", email = "ntomura92@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ble_to_the_certain_stopwatch_py"]
